--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
     </div>
   </div>
 
+  <!-- Global audio element for word playback -->
+  <audio id="audioWord" preload="auto"></audio>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
           crossorigin="anonymous"></script>
@@ -221,8 +224,26 @@
       return out;
     }
 
+    // ===== AUDIO HELPERS =====
+    function wordToFilename(word) {
+      // same logic as Python: spaces -> "_", lowercase
+      return word.toLowerCase().replace(/\s+/g, "_") + ".mp3";
+    }
+
+    function playWordAudio(word) {
+      const audio = document.getElementById("audioWord");
+      if (!audio) return;
+      const file = wordToFilename(word);
+      // audio/ folder next to this HTML
+      audio.src = "audio/" + file;
+      audio.play().catch(() => {
+        // silently fail (e.g. file not found)
+        console.warn("Audio not found:", audio.src);
+      });
+    }
+
     // Build items for a level into a unified format:
-    // { question, hint, options[], correct }
+    // { question, hint, options[], correct, source }
     function buildLevelItems(levelNum) {
       const cfg = LEVELS[levelNum];
       const type = cfg.type;
@@ -305,13 +326,22 @@
 
       const cfg = LEVELS[currentLevel];
 
+      const rightHeader = `
+        <div class="d-flex align-items-center gap-2">
+          ${item.hint ? `<span class="small text-muted">Hint: ${item.hint}</span>` : ""}
+          ${(item.source === "fill" || item.source === "speed")
+            ? `<button id="btnAudio" class="btn btn-sm btn-outline-secondary">🔊 Word</button>`
+            : ""}
+        </div>
+      `;
+
       const html = `
         <div class="card p-3 p-md-4">
           <div class="d-flex justify-content-between align-items-center mb-2">
             <div class="small text-muted">
               Level ${currentLevel}: ${cfg.name} — Question ${idx + 1}/${levelItems.length}
             </div>
-            <div class="small text-muted">${item.hint ? "Hint: " + item.hint : ""}</div>
+            ${rightHeader}
           </div>
           <h3 class="h5 mb-3">${item.question}</h3>
           <div id="options" class="mb-2">${pills}</div>
@@ -325,6 +355,12 @@
 
       const area = document.getElementById("area");
       area.innerHTML = html;
+
+      // Attach audio button if relevant
+      const btnAudio = area.querySelector("#btnAudio");
+      if (btnAudio && (item.source === "fill" || item.source === "speed")) {
+        btnAudio.addEventListener("click", () => playWordAudio(item.correct));
+      }
 
       let picked = null;
       const pillsEls = area.querySelectorAll(".answer-pill");
