--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="text-end small text-muted">
-          Check ➜ then press <span class="fw-bold">Next</span> to continue.
+          Tap an option → Check → Next.
         </div>
       </div>
     </div>
@@ -111,7 +111,7 @@
     </div>
   </div>
 
-  <!-- Global audio element for word playback -->
+  <!-- Global audio element -->
   <audio id="audioWord" preload="auto"></audio>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -234,10 +234,8 @@
       const audio = document.getElementById("audioWord");
       if (!audio) return;
       const file = wordToFilename(word);
-      // audio/ folder next to this HTML
       audio.src = "audio/" + file;
       audio.play().catch(() => {
-        // silently fail (e.g. file not found)
         console.warn("Audio not found:", audio.src);
       });
     }
@@ -326,14 +324,9 @@
 
       const cfg = LEVELS[currentLevel];
 
-      const rightHeader = `
-        <div class="d-flex align-items-center gap-2">
-          ${item.hint ? `<span class="small text-muted">Hint: ${item.hint}</span>` : ""}
-          ${(item.source === "fill" || item.source === "speed")
-            ? `<button id="btnAudio" class="btn btn-sm btn-outline-secondary">🔊 Word</button>`
-            : ""}
-        </div>
-      `;
+      const rightHeader = item.hint
+        ? `<span class="small text-muted">Hint: ${item.hint}</span>`
+        : "";
 
       const html = `
         <div class="card p-3 p-md-4">
@@ -341,7 +334,7 @@
             <div class="small text-muted">
               Level ${currentLevel}: ${cfg.name} — Question ${idx + 1}/${levelItems.length}
             </div>
-            ${rightHeader}
+            <div>${rightHeader}</div>
           </div>
           <h3 class="h5 mb-3">${item.question}</h3>
           <div id="options" class="mb-2">${pills}</div>
@@ -356,12 +349,6 @@
       const area = document.getElementById("area");
       area.innerHTML = html;
 
-      // Attach audio button if relevant
-      const btnAudio = area.querySelector("#btnAudio");
-      if (btnAudio && (item.source === "fill" || item.source === "speed")) {
-        btnAudio.addEventListener("click", () => playWordAudio(item.correct));
-      }
-
       let picked = null;
       const pillsEls = area.querySelectorAll(".answer-pill");
       const btnCheck = document.getElementById("btnCheck");
@@ -372,8 +359,14 @@
         btn.addEventListener("click", () => {
           pillsEls.forEach(b => b.classList.remove("active"));
           btn.classList.add("active");
-          picked = btn.dataset.opt;
+          const opt = btn.dataset.opt;
+          picked = opt;
           btnCheck.disabled = false;
+
+          // 🔊 play audio when option is question word
+          if (WORDS.includes(opt)) {
+            playWordAudio(opt);
+          }
         });
       });
 
